--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style >
+		body {
+			background-image: url("bg.jpg");
+			background-repeat: no-repeat;
+			background-size : cover;
+		}
+		h1 {
+			 color: white;
+		}
+
+	</style>
+
 	<title>
-		MAHIR
+		MAHIR DAIYAN
 	</title>
 </head>
 <body>
-	<h1>WELCOME TO MY WEBSITE</h1>
-	<h2>I AM MAHIR DAIYAN </h2>
-	
-	
+<center><h1>HELLO</h1></center>   
 </body>
 </html>
