--- a/index.html
+++ b/index.html
@@ -20,6 +20,54 @@
 	</title>
 </head>
 <body>
-<center><h1>HELLO</h1></center>   
+<center><h1>HELLO</h1></center>
+	<a href="https://www.facebook.com/mahir.daiyan.1650"> mahir</a> <br>
+  <a href="https://www.facebook.com/rafid010705"> rafid </a>
+   
+  <ol> <b>
+
+      <li>CAT</li>
+      <li>DOG</li>
+      <li>TIGER</li>
+      <li>ELEPHANT</li>
+
+  </ol> <b>
+
+  <ol type="i">
+      <li>CAT</li>
+      <li>DOG</li>
+      <li>TIGER</li>
+      <li>ELEPHANT</li>
+
+  </ol> <b>
+
+  <ol type="A">
+      <li>CAT</li>
+      <li>DOG</li>
+      <li>TIGER</li>
+      <li>ELEPHANT</li>
+
+  </ol> <b>
+
+  <ol  type="a">
+      <li>CAT</li>
+      <li>DOG</li>
+      <li>TIGER</li>
+      <li>ELEPHANT</li>
+
+  </ol>
+
+  <ul> <b>
+
+      <li>CAT</li> 
+      <li>DOG</li> 
+      <li>TIGER</li> 
+      <li>ELEPHANT</li>
+  </ul> 
+
+ <img src="E:\pussy.jpg" HEIGHT="300"> 
+ <IMG src="E:\DOG.JPG" height="300">
+ <img src="E:\TIGER.JPG"height="300">
+ <img src="E:\ELEPHANT.JPG" height="300">
 </body>
 </html>
