--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 			background-size : cover;
 		}
 		h1 {
-			 color: white;
+			 color: black;
 		}
 		li {
-			color: white;
+			color: black;
 		}
 		
 
