--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 <body>
 <center><h1>HELLO</h1></center>
-	<a href="https://www.facebook.com/mahir.daiyan.1650"> mahir</a> <br>
-  <a href="https://www.facebook.com/rafid010705"> rafid </a>
+	<h2><center><a href="https://www.facebook.com/mahir.daiyan.1650"> mahir</a> <br></center></h2>
+	<h2><center><a href="https://www.facebook.com/rafid010705"> rafid </a></center></h2>
    
   <ol> <b>
 
