--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<h2><center><a href="https://www.facebook.com/rafid010705"> RAFID </a></center></h2>
 	<h2><center><a href="https:\\www.youtube.com"> YOUTUBE </center></h2> </a href>
    
-  <ol> <b>
+ <!-- <ol> <b>
 
       <li>CAT</li>
       <li>DOG</li>
@@ -67,7 +67,7 @@
       <li>CAT</li> 
       <li>DOG</li> 
       <li>TIGER</li> 
-      <li>ELEPHANT</li>
+      <li>ELEPHANT</li> !-->
   </ul> 
 
  <img src="E:\pussy.jpg" HEIGHT="300"> 
