--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <li>ELEPHANT</li> !-->
   </ul> 
 
- <img src="E:\pussy.jpg" HEIGHT="300"> 
+ <img src="E:\CAT.jpg" HEIGHT="300"> 
  <IMG src="E:\DOG.JPG" height="300">
  <img src="E:\TIGER.JPG"height="300">
  <img src="E:\ELEPHANT.JPG" height="300"> 
