--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style >
 		body {
-			background-image: url("bg2.jpg");
+			background-image: url("bg.jpg");
 			background-repeat: no-repeat;
 			background-size : cover;
 		}
