--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
       <li>ELEPHANT</li> !-->
   </ul> 
 
- <!--<img src="E:\PUSSY.jpg" HEIGHT="300"> 
+ <img src="E:\PUSSY.jpg" HEIGHT="300"> 
  <IMG src="E:\DOG.JPG" height="300">
  <img src="E:\TIGER.JPG"height="300">
- <img src="E:\ELEPHANT.JPG" height="300"> !-->
+ <img src="E:\ELEPHANT.JPG" height="300"> 
 </body>
 </html>
