--- a/index.html
+++ b/index.html
@@ -23,6 +23,26 @@
 		MAHIR DAIYAN
 	</title>
 </head>
+	<style>
+    @ media print {
+      /* Hide every other element */ body * 
+
+      visibility: hidden ;
+    
+      }
+
+      /* Then displaying print container elements */.print-container, .print-container * {
+
+        visibility: visible ;
+
+      }
+    }
+  </style>
+       
+  <button onclick="window.print ();">
+       print
+  </button>
+
 <body>
 <center><h1>HELLO</h1></center>
 	<h2><center><a href="https://www.facebook.com/mahir.daiyan.1650"> MAHIR </a> <br></center></h2> 
