--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     }
   </style>
        
-  <button onclick="window.print ();">
-       print
-  </button>
+ <center> <button onclick="window.print ();">
+      <h2>print
+    </button></center>
 
 <body>
 <center><h1>HELLO</h1></center>
