--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </style>
        
  <center> <button onclick="window.print ();">
-      <h2>print
+         print
     </button></center>
 
 <body>
