--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style >
+		body {
+			background-image: url("bg1.jpg");
+			background-repeat: no-repeat;
+			background-size : cover;
+		}
+		h1 {
+			 color: black;
+		}
+		li {
+			color: black;
+		}
+		
 
+	</style>
+
+	<title>
+		MAHIR DAIYAN
+	</title>
+</head>
+	<style>
+    @ media print {
+      /* Hide every other element */ body * 
+
+      visibility: hidden ;
+    
+      }
+
+      /* Then displaying print container elements */.print-container, .print-container * {
+
+        visibility: visible ;
+
+      }
+    }
+  </style>
+       
+ <center> <button onclick="window.print ();">
+         print
+    </button></center>
+
+<body>
+<center><h1>HELLO</h1></center>
+	<h2><center><a href="https://www.facebook.com/mahir.daiyan.1650"> MAHIR </a> <br></center></h2> 
+	<h2><center><a href="https://www.facebook.com/rafid010705"> RAFID </a></center></h2>
+	<h2><center><a href="https:\\www.youtube.com"> YOUTUBE </center></h2> </a href>
+   
+ <!-- <ol> <b>
+      <li>CAT</li>
+      <li>DOG</li>
+      <li>TIGER</li>
+      <li>ELEPHANT</li>
+  </ol> <b>
+  <ol type="i">
+      <li>CAT</li>
+      <li>DOG</li>
+      <li>TIGER</li>
+      <li>ELEPHANT</li>
+  </ol> <b>
+  <ol type="A">
+      <li>CAT</li>
+      <li>DOG</li>
+      <li>TIGER</li>
+      <li>ELEPHANT</li>
+  </ol> <b>
+  <ol  type="a">
+      <li>CAT</li>
+      <li>DOG</li>
+      <li>TIGER</li>
+      <li>ELEPHANT</li>
+  </ol>
+  <ul> <b>
+      <li>CAT</li> 
+      <li>DOG</li> 
+      <li>TIGER</li> 
+      <li>ELEPHANT</li> !-->
+  </ul> 
+
+ <img src="E:\PUSSY.jpg" HEIGHT="300"> 
+ <IMG src="E:\DOG.JPG" height="300">
+ <img src="E:\TIGER.JPG"height="300">
+ <img src="E:\ELEPHANT.JPG" height="300"> 
+</body>
+</html>
